[#3] fix collapsed sibar , dev header

--- a/ecom-project/src/components/MenuSider/menusider.scss
+++ b/ecom-project/src/components/MenuSider/menusider.scss
@@ -6,11 +6,15 @@
     padding: 0px 10px;
     &__logo{
         width: 50%;
+      
     }
+    
     &__icon{
         font-size: 24px;
+        cursor: pointer;
     }
 }
+
 .button{
     width: 80%;
     display: flex;
